Changing the tag-line to better reflect current status

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Jai Pandya</h1>
-						<p>SlideShare Engineer, Traveller, Maker</p>
+						<p>FooBar in Tech at TalentPad, Ex-SlideShare/LinkedIn, Traveller, Maker</p>
 						<nav>
 							<ul>
 								<li><a href="http://twitter.com/jaipandya" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
