--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 						<p>FooBar in Tech at TalentPad, Ex-SlideShare/LinkedIn, Traveller, Maker</p>
 						<nav>
 							<ul>
-								<li><a href="http://twitter.com/jaipandya" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="http://facebook.com/pandya.jai" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="http://in.linkedin.com/in/jaipandya" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="http://github.com/jaipandya/" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://twitter.com/jaipandya" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://facebook.com/pandya.jai" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://in.linkedin.com/in/jaipandya" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/jaipandya/" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="#try-harder" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
